--- a/.github/workflows/action-terraform-verify.yml
+++ b/.github/workflows/action-terraform-verify.yml
@@ -49,4 +49,4 @@ jobs:
           done
       - name: Process check
         if: always()
-        run: exit $CHECK_STATU
+        run: exit $CHECK_STATUS
